--- a/qx.conf
+++ b/qx.conf
@@ -7,6 +7,7 @@ excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8, 127.0.
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 network_check_url=http://www.baidu.com/
 server_check_url=http://www.gstatic.com/generate_204
+profile_img_url= https://xb123.ga/xbmmw.png
 
 [dns]
 server=119.29.29.29
