--- a/qx.conf
+++ b/qx.conf
@@ -85,7 +85,7 @@ static=🇬🇧 United Kingdom, proxy, img-url=https://raw.githubusercontent.com
 
 static=🇨🇳 回国, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Map.png
 
-static=🎸解锁网易云音乐, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
+static=🎸解锁网易云音乐, direct, proxy, 微信公众号：小白妙妙屋, 解锁节点均免费提供，付费的均为骗子, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
 static=🚫屏蔽系统更新, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_Update.png
 
@@ -140,7 +140,9 @@ https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf
 
 [server_local]
 #本地节点
-http=207.148.98.161.ipssh.net:1248,overtls=false,fast-open=false,udp-relay=false,tag=网易🎵🈲️
+http=taron.top:100, fast-open=false, udp-relay=false, tag=微信公众号：小白妙妙屋
+
+http=149.248.51.118:19980,over-tls=false,fast-open=false,udp-relay=false,tag=解锁节点均免费提供，付费的均为骗子
 
 [task_local]
 
