--- a/qx.conf
+++ b/qx.conf
@@ -3,12 +3,13 @@
 ; 20200315_235500
 
 #此配置为小白自用配置（基于nzw9314所修改）
-#包含网易云解锁结点、小白个人的节点订阅及全部的nzw9314的重写语句
+#包含自己搭建的网易云解锁结点和全部的nzw9314的重写语句
 #使用前请先确认已挂载nzw9314大佬的库，教程：https://mp.weixin.qq.com/s/H1-Qmye0mu28CbNfr-Dyxw    挂载完成之后记得在重写-引用中点击全部同步
 #受1.0.8版本影响，本配置采用远程托管形式更新，随缘更新内容，请在更新前备份，以免被新配置覆盖。
 #使用中遇到任何问题，可通过微信、QQ联系我。
 
-#   微信公众号：小白妙妙屋   QQ群：233644349
+#   微信公众号：小白妙妙屋
+#   QQ群：233644349
 
 # 以 “;” 或 “#” 或 “//“ 开头的行为注释行。
 
@@ -91,9 +92,6 @@ static=🚫屏蔽系统更新, reject, direct, img-url=https://raw.githubusercon
 
 [server_remote]
 #节点订阅
-http://xb123.ga/wyy.txt, update-interval=86400, opt-parser=false, enabled=true
-http://xb123.ga/1xb.txt, enabled=true
-http://xb123.ga/quanx.txt, enabled=true
 
 
 [filter_remote]
@@ -140,7 +138,7 @@ https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf
 
 [server_local]
 #本地节点
-http=taron.top:100, fast-open=false, udp-relay=false, tag=微信公众号：小白妙妙屋
+http=xbmmw.xyz:1001, fast-open=false, udp-relay=false, tag=微信公众号：小白妙妙屋
 
 http=149.248.51.118:19980,over-tls=false,fast-open=false,udp-relay=false,tag=解锁节点均免费提供，付费的均为骗子
 
@@ -397,8 +395,8 @@ http=149.248.51.118:19980,over-tls=false,fast-open=false,udp-relay=false,tag=解
 # 米读
 # 打开 APP 进入`我的` -> `疯狂摇摇乐`,系统提示: `签到:获取Cookie: 成功`
 # 阅读时长获取Cookie:打开 APP 选取文章阅读， `书城` > `任意文章阅读` 等到提示获取Cookie成功即可
-*/1 * * * * nzw9314/chavyleung/midu/miduRead.js
-13 0 * * * nzw9314/chavyleung/midu/miduSign.js
+#*/1 * * * * nzw9314/chavyleung/midu/miduRead.js
+#13 0 * * * nzw9314/chavyleung/midu/miduSign.js
 
 # 多看
 # `我的` > `签到任务` 等到提示获取 Cookie 成功即可
